--- a/style.css
+++ b/style.css
@@ -2,20 +2,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    transition: all 0.5s ease;
 }
 
 .background{
-    background: black;
+    width: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    background: black;
     overflow: hidden;
-    height: 100vh;
 }
 
-.logo{
+.background .logo{
     width: 150px;
     height: max-content;
     display: flex;
@@ -25,159 +24,143 @@
     animation-delay: 1.7s;
 }
 
-.brush{
+.background .logo .brush1{
     width: 50px;
     height: 220px;
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    animation: scaler 0.5s ease forwards;
-    animation-delay: 4s;
     position: relative;
+    animation:height 0.5s ease forwards;
+    animation-delay: 4s;
 }
 
-.color{
-    width: 50px;
+.background .logo .brush1 .color{
+    width: 100%;
     height: 0%;
-    animation: moveup 0.5s ease forwards;
-    background: rgb(194, 0, 0);
+    background-color: rgb(194,0 ,0);
     position: relative;
     z-index: 2;
-}
-.lines{
-    width: max-content;
-    height: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    position: absolute;
-    z-index: 0;
-    display: none;
+    animation: moveup 0.5s ease forwards;
 }
 
-.brush2 {
+.background .logo .brush2{
     width: 50px;
     height: 220px;
     display: flex;
     align-items: flex-end;
 }
 
-.color2 {
+.background .logo .brush2 .color2{
     width: 100%;
     height: 0%;
+    background-color: rgb(194,0 ,0);
     animation: moveup 0.5s ease forwards;
     animation-delay: 1s;
-    background: rgb(194, 0, 0);
 }
 
-.brush3 {
+.background .logo .brush3{
     width: 50px;
     height: 0;
     position: absolute;
     z-index: 2;
-    transform-origin: top left;
     transform: skew(24.4deg);
+    transform-origin: top left;
+    background: red;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.33);
     animation: moveup 0.5s ease forwards;
     animation-delay: 0.5s;
+}
+
+.lines{
+    width: max-content;
+    height: 100%;
+    display: none;
+    justify-content: space-evenly;
+    position: absolute;
+    z-index: 0;
+}
+
+.lines .line{
+    width: 1px;
+    height: 100%;
     background: red;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.333);
+    margin-right: 1px;
+    animation: margin 2s linear forwards, bgcolor 0.2s linear forwards;
+    animation-delay: 0.2s;
 }
 
 
-.line{
-    width: 1px;
-    height: 100%;
-    animation: margin 2s linear forwards, bgcolor 0.2s linear forwards;
-    animation-delay: 0.2s;
-    background: red;
-    margin-right: 1px;
+/* forward animation starts */
+
+@keyframes moveup{
+    from {
+        height: 0;
+    }to{
+        height: 220px;
+    }
+}
+
+/* reverse animation */
+
+@keyframes movedown {
+    from {
+        height: 220px;
+    }
+    to {
+        height: 0;
+    }
+}
+
+
+/* main animation lines starts  */
+
+@keyframes opacity {
+    0%{
+        opacity: 1;
+    }100%{
+        opacity: 0;
+    }
 }
 
 @keyframes margin {
     0%{
         width: 1px;
-        margin-right:1px;
-        box-shadow:none;
-    }
-    100%{
-        margin-right: var(--m);
+        margin-right: 1px;
+        box-shadow: none;
+    }100%{
         width: 40px;
-        box-shadow: 0 0 5px rgb(172, 172, 172),
-                0 0 50px var(--c);
+        margin-right: var(--m);
+        box-shadow: 0 0 5px rgb(172, 172, 172), 0 0 50px var(--c);
     }
 }
 
-@keyframes bgcolor {
-    0% {
-        background-color: red;
-    }
-    30%{
-        background:radial-gradient(circle, rgba(255, 0, 0, 1) 75%, rgba(0, 0, 0, 0.5954714649531687) 100%);
+
+@keyframes bgcolor{
+    0%{
+        background:red
+    }30%{
+        background: radial-gradient(circle, rgba(255, 0, 0, 1) 75%, rgba(0,0 ,0 0.545) 100%);
     }100%{
         background: var(--c);
     }
 }
 
-@keyframes scaler {
+@keyframes height {
     0%{
         width: 50px;
         height: 220px;
-    }
-    100%{
+    }100%{
         width: max-content;
         height: 100vh;
     }
 }
 
-@keyframes opacity {
+
+@keyframes scale{
     0%{
-        opacity: 1;
-    }
-    100%{
-        opacity: 0;
-    }
-}
-
-@keyframes moveup{
-    0%{
-        height: 0px;
-    }
-    100%{
-        height: 220px;
-    }
-}
-
-@keyframes movedown {
-    0% {
-        height: 220px;
-    }
-
-    100% {
-        height: 0px;
-    }
-}
-
-@keyframes scale {
-    50%{
         transform: scale(1);
-    }
-    100%{
+    }100%{
         transform: scale(1.5);
     }
 }
-
-/* 
-
-#133286
-#3062af
-#4a7fcb
-#b6aea9
-#628ace
-#949fd9
-#9986aa
-#462652
-#b16f67
-#d3ad94
-#821e12
-#821e12
-#c34821
-*/
